# crm

./: README.md  pyproject.toml  requirements.txt  temp_delete.html  temp_scripts.py
core/: decorators.py  settings.py  urls.py
static/css/: style_main.css
website/: admin.py  forms.py  models.py  urls.py  views.py
website/management/commands/: seed_customers.py
website/migrations/: 0001_initial.py  0002_record.py  0003_alter_record_email_alter_record_phone.py  0004_rename_record_customer.py  0005_customer_updated_at.py  0006_alter_customer_phone.py  0007_rename_state_customer_country_customer_region_and_more.py  0008_product_order_orderitem.py  0009_alter_orderitem_order_alter_orderitem_price.py
website/templates/website/: add_customer.html  add_order.html  add_product.html  add_record.html  base.html  customer_detail.html  home.html  master_form.html  navbar.html  order_detail.html  order_list.html  product_detail.html  product_list.html  record.html  register.html  select2_script.html  update_customer.html  update_order.html  update_record.html
